--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="utf-8">
     <link href="style.css" rel="stylesheet">
+    <link rel="stylesheet" href="normalize.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Блок 1.3: Построение сеток + БЭМ именование</title>
 </head>
@@ -10,22 +11,22 @@
     <header class="header">
         <div class="header__menu menu">
             <div class="menu__group-button">
-                <button class="menu__button burger"></button>
+                <button class="button button--burger"></button>
             </div>
             <div class="menu__logo">
-                <a href="#"></a>
+                <a href="#"><img src="icons/Group.svg" alt="Логотип"></a>
             </div>
             <div class="menu__group-button menu__group-button--visible-768">
-                <button class="menu__button call"></button>
-                <button class="menu__button chat"></button>
-                <button class="menu__button profile"></button>
+                <button class="button button--call"></button>
+                <button class="button button--chat"></button>
+                <button class="button button--profile"></button>
             </div>
             <div class="menu__group-button menu__group-button--visible-1120">
-                <button class="menu__button repair">
-                    <span class="repair__caption repair__caption--visible1120">Оставить заявку</span>
+                <button class="button button--repair">
+                    <span class="button__caption">Оставить заявку</span>
                 </button>
-                <button class="menu__button checkstatus">
-                    <span class="checkstatus__caption checkstatus__caption--visible1120">Статус ремонта</span>
+                <button class="button button--checkstatus">
+                    <span class="button__caption">Статус ремонта</span>
                 </button>
              </div>
         </div>       
@@ -36,12 +37,12 @@
        </div>
        <nav class="main-page__menu">
             <ul class="slide-menu">
-                <li class="slide-menu__link"><a href="">Ремонтируемые устройства</a></li>
-                <li class="slide-menu__link"><a href="">Дополнительные услуги</a></li>
-                <li class="slide-menu__link"><a href="">Цены на услуги</a></li>
-                <li class="slide-menu__link"><a href="">Адреса сервисных центров</a></li>
-                <li class="slide-menu__link"><a href="">Специальные цены</a></li>
-                <li class="slide-menu__link"><a href="">Отзывы</a></li>
+                <li  class="slide-menu__items"><a class="slide-menu__link slide-menu__link--selected" href="">Ремонтируемые устройства</a></li>
+                <li class="slide-menu__items"><a class="slide-menu__link"  href="">Дополнительные услуги</a></li>
+                <li class="slide-menu__items"><a class="slide-menu__link" href="">Цены на услуги</a></li>
+                <li class="slide-menu__items"><a class="slide-menu__link" href="">Адреса сервисных центров</a></li>
+                <li class="slide-menu__items"><a class="slide-menu__link" href="">Специальные цены</a></li>
+                <li class="slide-menu__items"><a class="slide-menu__link" href="">Отзывы</a></li>
             </ul>
         </nav>
        <div class="main-page__first-block first-block">
