--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="normalize.css">
 </head>
 <body>
-    <div class="mobile-menu">
+    <aside class="mobile-menu">
         <div class="header-menu">
             <div class="header-menu__button">
                 <button class="icon-button icon-button--burger"></button>
@@ -20,7 +20,7 @@
                 <button class="icon-button icon-button--search"></button>
             </div>
         </div>
-        <aside class="main-page">
+        <div class="main-page">
             <nav class="main-page__main-menu">
                 <ul class="main-menu">
                     <li class="main-menu__items">
@@ -49,7 +49,7 @@
                     </li>
                 </ul>
             </nav>
-        </aside>
+        </div>
         <div class="footer-menu">
             <div class="footer-menu__contact contact">
                 <div class="contact__button-group button-group">
@@ -70,6 +70,6 @@
                 <button class="lang__button">CH</button>
             </div>
         </div>
-    </div>
+    </aside>
 </body>
 </html>
