--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -58,7 +58,7 @@
                     <button class="button-group__icon-button icon-button icon-button--profile"></button>
                 </div>
                 <div class="contact__mail mail">
-                    <a class="mail-link" href="mailto:mail@cps.com">mail@cps.com</сдa> 
+                    <a class="mail-link" href="mailto:mail@cps.com">mail@cps.com</a> 
                 </div>
                 <div class="contact__phone phone">
                     <a class="phone-link" href="tel:+78008908900">8 800 890 8900</a>
