--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <div class="main-page">
             <nav class="main-page__main-menu">
                 <ul class="main-menu">
-                    <li class="main-menu__items">
+                    <li class="main-menu__items main-menu__items--active">
                         <a class="main-menu__link main-menu__link--active" href="#">Ремонт техники</a>
                     </li>
                     <li class="main-menu__items">
